--- a/app/styles/footer.css
+++ b/app/styles/footer.css
@@ -59,12 +59,16 @@ width: 3em;
  @media only screen and (min-device-width : 320px) and (max-device-width : 480px){
 
   .footerLogo {
-    width: 25%;
+    width: 18%;
   }
 
   .socFooter {
     width: 50%;
-    padding-top: 10%;
+    padding-top: 3%;
+  }
+
+  .ghLogo, .liLogo, .mailLogo {
+    width: 5em;
   }
 
   .footerText {
